Improve navbar script for recognizing user login status
Navbar now have a responsive tab for user actions, if user not logged in it displays login and sign up link as before, if user is logged in instead displays a welcome message (that is also a link to user reservations) and logout option.
